--- a/backend/post.html
+++ b/backend/post.html
@@ -4,7 +4,7 @@
     <title>Test</title>
 </head>
 <body>
-    <form action="/jobs" method="POST">
+    <form action="/jobs" method="POST" enctype="multipart/form-data" >
         <input type="text" name="name" />
         <input type="file" name="image" />
         <input type="submit" />
